Fix shadow and spacing on images

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 img {
     width:100%;
     height: 300px;
-    margin: 10px;
+    margin: 20px;
     overflow: hidden;
     object-fit: cover;
     object-position: center;
